--- a/app/src/main/res/layout/activity_countries.xml
+++ b/app/src/main/res/layout/activity_countries.xml
@@ -6,12 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activities.CountriesActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Countries"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="268dp" />
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayoutCountries"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#03A9F4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicatorColor="#FF0000"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="#FFFFFF" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPagerCountries"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
