--- a/app/src/main/res/layout/fragment_france.xml
+++ b/app/src/main/res/layout/fragment_france.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageViewUnitedKingdom"
+                android:id="@+id/imageViewFrance"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginStart="16dp"
@@ -35,31 +35,31 @@
                 />
 
             <ProgressBar
-                android:id="@+id/progressBarUnitedKingdom"
+                android:id="@+id/progressBarFrance"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/imageViewUnitedKingdom"
-                app:layout_constraintEnd_toEndOf="@+id/imageViewUnitedKingdom"
-                app:layout_constraintStart_toStartOf="@+id/imageViewUnitedKingdom"
-                app:layout_constraintTop_toTopOf="@+id/imageViewUnitedKingdom" />
+                app:layout_constraintBottom_toBottomOf="@+id/imageViewFrance"
+                app:layout_constraintEnd_toEndOf="@+id/imageViewFrance"
+                app:layout_constraintStart_toStartOf="@+id/imageViewFrance"
+                app:layout_constraintTop_toTopOf="@+id/imageViewFrance" />
 
             <TextView
-                android:id="@+id/textViewUnitedKingdom"
+                android:id="@+id/textViewFrance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="7dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="7dp"
                 android:padding="5dp"
-                android:text="@string/united_kingdom"
+                android:text="@string/france"
                 android:textAlignment="viewStart"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewUnitedKingdom" />
+                app:layout_constraintTop_toBottomOf="@+id/imageViewFrance" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
